kubernetes-files/frontend/demo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend-service
  namespace: default
spec:
  selector:
    app: demo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
