kubernetes-files/frontend/demo-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-apps
spec:
  ingressClassName: alb
  rules:
    - host: property.zodiai.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend-service
                port:
                  number: 80
